Add hitButton functionality, gives player card on each click

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <button id="startButton">Start!</button>
+    <button id="startButton">Start Game</button>
+    <button id="hitButton" class="playerButtons">Hit</button>
+    <button id="standButton" class="playerButtons">Stand</button>
+    <button id="doubleDownButton" class="playerButtons">Double Down</button>
 </body>
 </html>
