Add a reset game button when winner or loser is decided

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div id="displayInfo">
             <h1><span id="gameOutcome"></span></h1>
             <h2>Players Cards: <br /><span id="playersCards"></span></h2>
-            <h3>Players Points: <span id="playersPoints"></span> </h3>
+            <h2>Players Points: <span id="playersPoints"></span> </h2>
             <h2>Dealers Cards: <br /><span id="dealersCards"></span></h2>
-            <h3>Dealers Points: <span id="dealersPoints"></span> </h3>
+            <h2>Dealers Points: <span id="dealersPoints"></span> </h2>
         </div>
 
         <div>
@@ -28,6 +28,7 @@
             <button id="standButton" class="playerButtons">Stand</button>
             <button id="doubleDownButton" class="playerButtons">Double Down</button>
         </div>
+        <button id="restartGameButton" class="playerButtons">Restart Game</button>
     </div>
 </body>
 
