Add ability to see cards as pictures rather than as words, add functionality to allow aces to be both 1s and 11s.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div id="displayInfo">
             <h1><span id="gameOutcome"></span></h1>
             <h2>Players Cards: <br /><span id="playersCards"></span></h2>
-            <h2>Players Points: <span id="playersPoints"></span> </h2>
+            <h2>Value: <span id="playersPoints"></span> </h2>
             <h2>Dealers Cards: <br /><span id="dealersCards"></span></h2>
-            <h2>Dealers Points: <span id="dealersPoints"></span> </h2>
+            <h2>Value: <span id="dealersPoints"></span> </h2>
         </div>
 
         <div>
