Fix bug where players aces were not calculated accurately

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h3 id="money">Money: <span id="moneyAmount">0</span></h3>
     <div id="mainContainer">
         <div id="displayInfo">
             <h1><span id="gameOutcome"></span></h1>
@@ -30,7 +31,9 @@
             <button id="doubleDownButton" class="playerButtons">Double Down</button>
         </div>
         <button id="restartGameButton" class="playerButtons">Restart Game</button>
+        
     </div>
+    
 </body>
 
 </html>
