Add initial README

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&family=Archivo+Black&family=Freeman&family=Lilita+One&family=Poetsen+One&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
-    <!-- Used google fonts, AnimateCSS, HaikeiApp, cssButtons, and icons8 -->
 </head>
 
 <body>
@@ -28,7 +27,7 @@
 
         <div id="bettingScreen">
             <div id="bettingTitleBox">
-                <h1>How many coins would you like to bet?</h1>
+                <h1 class="freeman-regular">How many coins would you like to bet?</h1>
                 <img src="decoration_images/icons8-coins-48.png" alt="stack of coins">
             </div>
             <form action="" onsubmit="return false;">
@@ -53,6 +52,11 @@
         <button id="continueGameButton" class="playerButtons bn6">Continue</button>
         <button id="restartGameButton" class="playerButtons bn6">Restart</button>
     </div>
+
+    <!-- HTML Template for requirement -->
+    <template id="requirement">
+        <h1>this is content</h1>
+    </template>
 
 </body>
 
